app/javascript/flavours/aether/styles/accounts.scss
/* ... */
.follow-request-banner .button {
  width: 100%;
}

.account-memorial-banner__message {
  margin-bottom: 0;
}

.account-timeline__right-column {
  h4 {
    border-bottom: 1px solid var(--ui-highlight-color);
    padding: 10px 0;
    font-size: 1rem;
    font-weight: bold;

    a {
      text-decoration: none;
    }

    span {
      color: var(--ui-highlight-color);
    }
  }
}

.tags-wrapper {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.account-timeline__right-column .trends__item {
  border-bottom: 0;
  width: 50%;
  box-sizing: border-box;
  padding: 0;
  margin-top: 8px;

  a {
    text-decoration: none;
    width: 100%;
    display: flex;
    align-items: flex-end;
    padding: 15px;
    transition:
      background 0.2s,
      color 0.2s;
    border-radius: var(--ui-border-radius);

    &:hover {
      background: var(--ui-highlight-color);
      color: var(--ui-highlight-button-text-color);

      .trends__item__name,
      .trends__item__current {
        color: var(--ui-highlight-button-text-color);
      }
    }
  }
}

.account-mini-gallery__container {
  display: flex;
  flex-wrap: wrap;
  margin-top: 8px;

  .account-gallery__item {
    flex: auto;
    width: 148px;
    height: 148px;

    &:nth-child(n + 9) {
      display: none;
    }
  }
}

.layout-single-column {
  @media screen and (min-width: $widescreen-breakpoint) {
    .account-mini-gallery__container {
      .account-gallery__item {
        &:first-child,
        &:nth-child(2) {
          height: 220px;
          width: 220px;
        }
      }
    }

    .account-gallery__container .account-gallery__item {
      width: 228px;
      height: 228px;
    }
  }
}

